7章　インターフェース

--- a/en/ch07.md
+++ b/en/ch07.md
@@ -1,3 +1,113 @@
+
+# 7 インターフェース
+インターフェースとは多くのパラメータをメソッドに渡す際に1つのオブジェクトにパラメータをまとめる手法をよくとります。
+	
+インターフェイスには、純粋にcompile-timeの構造でrun-timeの表現を持っていません。
+
+インターフェースの定義には interfaceキーワードを使用し、クラスに実装を強制する際には implementsキーワードを使用します。
+	
+## 7.1 インターフェイス宣言	
+
+次に示すのは、インターフェイス宣言の書式です。
+
+```text
+InterfaceDeclaration:
+    interface Identifier TypeParameters(opt) InterfaceExtendsClause(opt) ObjectType
+
+InterfaceExtendsClause:
+    extends ClassOrInterfaceTypeList
+
+ClassOrInterfaceTypeList:
+    ClassOrInterfaceType
+    ClassOrInterfaceTypeList , ClassOrInterfaceType
+
+ClassOrInterfaceType:
+    TypeReference
+```
+
+## 7.2 Declaration Merging
+同じ名前のインターフェイスを宣言した場合は、それぞれのメンバがマージされます。
+
+例えば：
+```typescript
+interface Document {
+    createElement(tagName: any): Element;
+}
+
+interface Document {
+    createElement(tagName: string): HTMLElement;
+}
+
+interface Document {
+    createElement(tagName: "div"): HTMLDivElement;
+    createElement(tagName: "span"): HTMLSpanElement;
+    createElement(tagName: "canvas"): HTMLCanvasElement;
+}
+```
+
+上記のインターフェイスDocumentは次のコードと同等です。
+
+```typescript
+interface Document {
+    createElement(tagName: "div"): HTMLDivElement;
+    createElement(tagName: "span"): HTMLSpanElement;
+    createElement(tagName: "canvas"): HTMLCanvasElement;
+    createElement(tagName: string): HTMLElement;
+    createElement(tagName: any): Element;
+}
+```
+
+## 7.3 Interfaces Extending Classes
+extends キーワードを使うことで、ほかのインターフェイスを拡張した新しいインターフェイスを定義することができます。 他のインターフェイスを拡張したインターフェイスは、もとのインターフェイスのシグニチャをすべて受け継ぎます。
+
+例えば：
+
+```typescript
+class Control {
+    private state: any;
+}
+
+interface SelectableControl extends Control {
+    select(): void;
+}
+
+class Button extends Control {
+    select() { }
+}
+
+class TextBox extends Control {
+    select() { }
+}
+
+class Image extends Control {
+}
+
+class Location {
+    select() { }
+}
+```
+
+## 7.4 Dynamic Type Checks
+
+例えば
+
+```typescript
+var obj: any = getSomeObject();
+if (obj && obj.move && obj.shake && obj.getStatus) {
+    var moverShaker = <MoverShaker> obj;
+    ...
+}
+```
+
+If such a check is used often it can be abstracted into a function:
+
+```typescript
+function asMoverShaker(obj: any): MoverShaker {
+    return obj && obj.move && obj.shake && obj.getStatus ? obj : null;
+}
+```
+
+	
 # 7 Interfaces
 
 Interfaces provide the ability to name and parameterize object types and to compose existing named
